src/main/webapp/media/css/screen.css
/*reset the default boostrap design:*/
.container {
  width: auto;
  padding:0;
  margin:0;
  margin-left: 365px;
}
pre{
  border: 0; 
  background-color: #333333;
}
pre code{
  border: 0;
  background-color: #333333;
  color: #FFFFFF;
}
hr {
  border: 0;
  margin: 0;
  border-top: 1px solid #D7D8D6 ;
}

@media only screen and (min-width: 1716px) {
  #breadcrumb-section-more-page {
    height: 40px;
  }
  #api-info-section-more-page {
    top: 125px;
  }
}

@media only screen and (max-width: 1420px) {
  #transaction_selector-option-box {visibility: hidden;}
}

@media only screen and (min-width: 1280px) {
  #left_side_small_screen{
    display: none;
  }
}

@media only screen and (min-width: 760px) and (max-width: 1279px) {
  .settings-imgs{
    display: none;
  }
  #left_side_small_screen .settings-imgs{
    display: block;
  }
  #left_side_small_screen .logout-link{
    margin-right: 28px;
    margin-left: 28px;
    font-family: UniversNextforHSBC-Regular;
    font-size: 16px;
    color: #333333;
    text-align: center;
    line-height: 24px;
    text-decoration: none;
  }
  #left_side_small_screen a:hover{
    text-decoration: none;
  }
  #left_side_small_screen .settings-box{
    height: 62px;
  }
  #left_side_small_screen .settings-imgs__link:first-child {
    border:0;
    margin: -1px 7px 0 -1px;
    padding: 2px 8px 0 8px;
  }
  #left_side_small_screen,
  #left_side{
    display: none;
  }
  
  #left_side_small_screen .api_group_item_small_screen {
    background-image: url('/media/images/chevron_up_thick.svg');
    background-repeat:no-repeat;
    background-position: top 0px right 9px;
    background-size: 16px 9.7px;
  }
  #left_side_small_screen .collapsed {
    background-image: url('/media/images/chevron_down_thick.svg');
    background-position: top 0px right 9px;
    background-repeat:no-repeat ;
    background-size: 16px 9.7px;
  }
  .sidebar {
    height: 88px;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #ffffff;
    overflow-x: hidden;
    transition: 0.5s;
  }
  .sidebar a {
    text-decoration: none;
    font-family: UniversNextforHSBC-Regular;
    font-size: 16px;
    color: #333333;
    line-height: 24px;
  }
  .sidebar #sideba-api-key-div a {
    font-family: UniversNextforHSBC-Medium;
  }
  #small-screen-navbar{
    text-align: center;
  }
  #small-screen-navbar #small-nav-collapse {
    width: 22px;
    height: 22px;
    margin-top: 26px;
    margin-bottom: 26px;
    margin-left: 16px;
    float: left;
    background-image: url(/media/images/Path.png);
    background-repeat: no-repeat;
    background-size: 18px 18px;
    display: none;
  }
  #small-nav-collapse {
    width: 22px;
    height: 22px;
    margin-top: 33px;
    margin-bottom: 33px;
    margin-left: 25px;
    float: left;
    background-image: url(/media/images/Path.png);
    background-repeat: no-repeat;
    background-size: 18px 18px;
    display: none;
  }
  #small-nav-cross {
    width: 22px;
    height: 22px;
    margin-top: 33px;
    margin-bottom: 33px;
    margin-left: 25px;
    float: left;
    background-image: url(/media/images/Path.png);
    background-repeat: no-repeat;
    background-size: 18px 18px;
  }
  .content-box__info-box {max-width: 1000px;}
  .content-box__input-box {max-width: 1000px;}
  .content-box__right-box {max-width: 1000px;}
  .content-box__text-box {max-width: 1000px;}
  .container {margin-left: 0px;}
  .option-section {display: none;}
  .default-button {left: 88%;}
  .default-input {max-width: 82%;}
  .version_path {visibility: hidden;}
  .api_list {
    display: none;
    width: 100%;
    top:88px
  }
  .content-box__headline {
    margin: -220px 0 32px 0;
    padding: 220px 0 0 0;
  }
  #logo-left {
    visibility: visible;
    display: inline-block;
    float: none;
  }
  #logo-right {visibility: hidden;}
  #right_side .resource:nth-child(4) .content-box__headline{
    margin: 0 0 32px 0;
    padding: 220px 0 0 0;
  }
  #small-nav-collapse{
    display: block;
  }
  #small-screen-navbar #small-nav-collapse {
    display: block;
  }
  .header .container{
    text-align: center;
  }
  .api_list_item {
    background: none
  }
  .api_group_name_small_screen a{
    margin-bottom: 100px;
  }
}

@media only screen and (max-width: 759px)  {
  li[name="other_versions"] {
    display: none;
  }
  #logo-left {
    margin: 25px 0 25px 25px;
    height: 20px;
  }
  #logo-left a img {
    height: 20px;
  }
  .settings-imgs{
    display: none;
  }
  #left_side_small_screen .settings-imgs{
    display: block;
  }
  #left_side_small_screen .logout-link{
    margin-right: 28px;
    margin-left: 28px;
    font-family: UniversNextforHSBC-Regular;
    font-size: 16px;
    color: #333333;
    text-align: center;
    line-height: 24px;
    text-decoration: none;
  }
  #left_side_small_screen a:hover{
    text-decoration: none;
  }
  #left_side_small_screen .settings-box{
    height: 62px;
  }
  #left_side_small_screen .settings-imgs__link:first-child {
    border:0;
    margin: -1px 7px 0 -1px;
    padding: 2px 8px 0 8px;
  }
  #left_side_small_screen,
  #left_side{
    display: none;
  }

  #left_side_small_screen .api_group_item_small_screen {
    background-image: url('/media/images/chevron_up_thick.svg');
    background-repeat:no-repeat;
    background-position: top 0px right 9px;
    background-size: 16px 9.7px;
  }
  #left_side_small_screen .collapsed {
    background-image: url('/media/images/chevron_down_thick.svg');
    background-position: top 0px right 9px;
    background-repeat:no-repeat ;
    background-size: 16px 9.7px;
  }
  .sidebar {
    height: 88px;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #ffffff;
    overflow-x: hidden;
    transition: 0.5s;
  }
  .sidebar a {
    text-decoration: none;
    font-family: UniversNextforHSBC-Regular;
    font-size: 16px;
    color: #333333;
    line-height: 24px;
  }
  .sidebar #sideba-api-key-div a {
    font-family: UniversNextforHSBC-Medium;
  }
  #small-screen-navbar{
    text-align: center;
  }
  #small-screen-navbar #small-nav-collapse {
    width: 22px;
    height: 22px;
    margin-top: 26px;
    margin-bottom: 26px;
    margin-left: 16px;
    float: left;
    background-image: url(/media/images/Path.png);
    background-repeat: no-repeat;
    background-size: 18px 18px;
    display: none;
  }
  #small-nav-collapse {
    width: 18px;
    height: 18px;
    margin-top: 26px;
    margin-bottom: 26px;
    margin-left: 16px;
    float: left;
    background-image: url(/media/images/Path.png);
    background-repeat: no-repeat;
    background-size: 18px 18px;
    display: none;
  }
  #small-nav-cross {
    width: 22px;
    height: 22px;
    margin-top: 33px;
    margin-bottom: 33px;
    margin-left: 25px;
    float: left;
    background-image: url(/media/images/Path.png);
    background-repeat: no-repeat;
    background-size: 18px 18px;
  }
  .content-box__info-box {max-width: 1000px;}
  .content-box__input-box {max-width: 1000px;}
  .content-box__right-box {max-width: 1000px;}
  .content-box__text-box {max-width: 1000px;}
  .container {margin-left: 0px;}
  .option-section {display: none;}
  .default-button {left: 88%;}
  .default-input {max-width: 82%;}
  .version_path {visibility: hidden;}
  .api_list {
    display: none;
    width: 100%;
    top:88px
  }
  .content-box__headline {
    margin: -220px 0 32px 0;
    padding: 220px 0 0 0;
  }
  #logo-left {
    visibility: visible;
    display: inline-block;
    float: none;
  }
  #logo-right {visibility: hidden;}
  #right_side .resource:nth-child(4) .content-box__headline{
    margin: 0 0 32px 0;
    padding: 220px 0 0 0;
  }
  #small-nav-collapse{
    display: block;
  }
  #small-screen-navbar #small-nav-collapse {
    display: block;
  }
  .header .container{
    text-align: center;
  }
  .api_list_item {
    background: none
  }
  .api_group_name_small_screen a{
    margin-bottom: 100px;
  }
  .sign-box__text {
    display: block;
    padding: 5px 12px 7px;
    margin: 0;
    background-color: #DB0011;
    font-family: UniversNextforHSBC-Regular;
    font-size: 12px;
    color: #FFFFFF;
    letter-spacing: 0;
    text-align: center;
    line-height: 18px;
  }
  .breadcrumb-section {
    top: 70px;
  }
  .api-info-section {
    top:110px
  }
  .header .settings-box {
    float: right;
    margin: 19px 16px 19px 0;
  }
}

@media only screen and (max-width: 535px) {
  #More {visibility: hidden;}
}
@media only screen and (max-width: 455px) {
  #Glossary {display: none}
}

@media only screen and (max-width: 372px) {
  #OBP_PSD2 {display: none}
}

